--- a/Manifests/dss.yml
+++ b/Manifests/dss.yml
@@ -5,12 +5,12 @@ metadata:
   name: yelp-camp-secrets
 type: Opaque
 data:
-  CLOUDINARY_CLOUD_NAME: ZGlpMnJvenRw
-  CLOUDINARY_KEY: NzU3NjQzMjU3ODkxMzY0
-  CLOUDINARY_SECRET: SHpBeTdPU3VCZjJhSUFSUm5Fd0tIcEVtc01N
-  MAPBOX_TOKEN: cGsuZXlKMUlqb2lZV1JwYW1GcGMzZGhiQ0lzSW1FaU9pSmpiSFl3TnpKemVHNHhaRzR5TW1wd1ltWm1OSFZ3YlhObUluMC5SVlFZc3UwUnZKZ0NGNTRrMjJkWDBB
-  DB_URL: bW9uZ29kYitzcnY6Ly9qYWlzd2FsYWRpMjQ2OnNjN1ZHU3lkN2RRQ2NMeTFAY2x1c3RlcjAuaXE2bXV0aC5tb25nb2RiLm5ldC8/cmV0cnlXcml0ZXM9dHJ1ZSZ3PW1ham9yaXR5JmFwcE5hbWU9Q2x1c3RlcjA=
-  SECRET: ZGV2b3Bzc2hhY2s=
+  CLOUDINARY_CLOUD_NAME: ZGJibm9icHZ2Cg==
+  CLOUDINARY_KEY: OTExNDg3NTYyMTIxNjc1Cg==
+  CLOUDINARY_SECRET: LUgzbjg5aW9wY1J3SWI4MTc5bHhtcXZXaTRZCg==
+  MAPBOX_TOKEN: c2suZXlKMUlqb2ljMmxpYVRFeU16UWlMQ0poSWpvaVkyeDJhREV6ZW5wbE1Hb3piekpzY1hnd2FXUXlaakJ4YXlKOS56THZEZXd5eEhLZ21ydmtnaHFBQVNBCg==
+  DB_URL: bW9uZ29kYitzcnY6Ly9zaWJpY2hhbmRydTk5OmdBbmUzYTYyd3ZOWVVsZzJAY2x1c3Rlci5ldXJza3hxLm1vbmdvZGIubmV0Lz9yZXRyeVdyaXRlcz10cnVlJnc9bWFqb3JpdHkmYXBwTmFtZT1DbHVzdGVyCg==
+  SECRET: My10aWVyLWFwcAo=
 
 ---
 apiVersion: apps/v1
